--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fontsource/roboto": "^4.5.8",
@@ -18,11 +20,12 @@
     "@reduxjs/toolkit": "^1.8.6",
     "async-mutex": "^0.4.0",
     "axios": "^1.1.3",
+    "babel-eslint": "^10.1.0",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
-    "next": "13.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "^13.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.4",
     "react-social-login-buttons": "^3.6.1",
@@ -37,7 +40,7 @@
     "@types/react-dom": "18.0.7",
     "@types/styled-components": "^5.1.26",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "^13.0.0",
     "prettier": "^2.7.1",
     "typescript": "4.8.4"
   }
