--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.25.8",
     "@types/lodash": "^4.14.186",
     "@types/node": "18.11.6",
     "@types/react": "18.0.23",
