--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "eslint-config-next": "^13.0.0",
     "prettier": "^2.7.1",
     "typescript": "4.8.4"
-  }
+  },
+  "engines": {
+  "node": "16.x"
+}
 }
