Build Environment Variable

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-# NEXT_PUBLIC_API_HOST=http://localhost:3210
 NEXT_PUBLIC_API_HOST=http://localhost:3210
 # NEXT_PUBLIC_API_HOST=https://hufschuh-app-backend-9bebbc206e13.herokuapp.com
+API_BASE=http://localhost:3210
+# API_BASE=https://hufschuh-app-backend-9bebbc206e13.herokuapp.com
